Fixed failing tests after refactoring