@@ -4,6 +4,7 @@ import static java.util.Optional.ofNullable;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.within;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.doNothing;
@@ -28,11 +29,13 @@ import static se.sundsvall.invoicesender.integration.db.entity.ItemStatus.SENT;
 import static se.sundsvall.invoicesender.integration.db.entity.ItemStatus.UNHANDLED;
 import static se.sundsvall.invoicesender.integration.db.entity.ItemType.INVOICE;
 import static se.sundsvall.invoicesender.integration.db.entity.ItemType.OTHER;
+import static se.sundsvall.invoicesender.service.InvoiceProcessor.ARCHIVE_INDEX_XML;
 
 import java.io.IOException;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.temporal.ChronoUnit;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -102,12 +105,12 @@ class InvoiceProcessorTests {
 	 * Test scenario where item is an invoice.
 	 */
 	@Test
-	void markItems_1() {
+	void markItem_1() {
 		var invoiceFilenamePrefixes = Map.of("2281", List.of("faktura"));
 		ReflectionTestUtils.setField(invoiceProcessor, "invoiceFilenamePrefixes", invoiceFilenamePrefixes);
 		var item = createItemEntity(itemBeingModified -> itemBeingModified.setFilename("faktura123.pdf"));
 
-		invoiceProcessor.markItems(item, MUNICIPALITY_ID);
+		invoiceProcessor.markItem(item, MUNICIPALITY_ID);
 
 		assertThat(item.getType()).isEqualTo(INVOICE);
 		assertThat(item.getStatus()).isEqualTo(IN_PROGRESS);
@@ -117,12 +120,12 @@ class InvoiceProcessorTests {
 	 * Test scenario where item is an invoice but doesn't follow tha naming convention.
 	 */
 	@Test
-	void markItems_2() {
+	void markItem_2() {
 		var invoiceFilenamePrefixes = Map.of(MUNICIPALITY_ID, List.of("faktura"));
 		ReflectionTestUtils.setField(invoiceProcessor, "invoiceFilenamePrefixes", invoiceFilenamePrefixes);
 		var item = createItemEntity(itemBeingModified -> itemBeingModified.setFilename("should-be-ignored.pdf"));
 
-		invoiceProcessor.markItems(item, MUNICIPALITY_ID);
+		invoiceProcessor.markItem(item, MUNICIPALITY_ID);
 
 		assertThat(item.getType()).isEqualTo(INVOICE);
 		assertThat(item.getStatus()).isEqualTo(IGNORED);
@@ -132,10 +135,10 @@ class InvoiceProcessorTests {
 	 * Test scenario where item is not an invoice.
 	 */
 	@Test
-	void markItems_3() {
+	void markItem_3() {
 		var item = createItemEntity(itemBeingModified -> itemBeingModified.setFilename("should-be-ignored.jpeg"));
 
-		invoiceProcessor.markItems(item, MUNICIPALITY_ID);
+		invoiceProcessor.markItem(item, MUNICIPALITY_ID);
 
 		assertThat(item.getType()).isEqualTo(OTHER);
 		assertThat(item.getStatus()).isEqualTo(IGNORED);
@@ -191,12 +194,12 @@ class InvoiceProcessorTests {
 	 * Test scenario where recipient have protected identity.
 	 */
 	@Test
-	void markProtectedIdentityItems_1() {
+	void markProtectedIdentityItem_1() {
 		var item = createItemEntity(itemBeingModified -> itemBeingModified.setRecipientPartyId("somePartyId"));
 		var municipalityId = "someMunicipalityId";
 		when(citizenIntegrationMock.hasProtectedIdentity(item.getRecipientPartyId(), municipalityId)).thenReturn(true);
 
-		invoiceProcessor.markProtectedIdentityItems(item, municipalityId);
+		invoiceProcessor.markProtectedIdentityItem(item, municipalityId);
 
 		assertThat(item.getStatus()).isEqualTo(RECIPIENT_LEGAL_ID_NOT_FOUND_OR_INVALID);
 	}
@@ -205,12 +208,12 @@ class InvoiceProcessorTests {
 	 * Test scenario where recipient does not have protected identity.
 	 */
 	@Test
-	void markProtectedIdentityItems_2() {
+	void markProtectedIdentityItem_2() {
 		var item = createItemEntity(itemBeingModified -> itemBeingModified.setRecipientPartyId("somePartyId"));
 		var municipalityId = "someMunicipalityId";
 		when(citizenIntegrationMock.hasProtectedIdentity(item.getRecipientPartyId(), municipalityId)).thenReturn(false);
 
-		invoiceProcessor.markProtectedIdentityItems(item, municipalityId);
+		invoiceProcessor.markProtectedIdentityItem(item, municipalityId);
 
 		assertThat(item.getStatus()).isEqualTo(UNHANDLED);
 	}
@@ -219,11 +222,11 @@ class InvoiceProcessorTests {
 	 * Test scenario where recipient party id is found.
 	 */
 	@Test
-	void fetchInvoiceRecipientPartyIds_1() {
+	void fetchInvoiceRecipientPartyId_1() {
 		var item = createItemEntity(itemBeingModified -> itemBeingModified.setRecipientLegalId("202104142399"));
 		when(partyIntegrationMock.getPartyId(item.getRecipientLegalId(), MUNICIPALITY_ID)).thenReturn(Optional.of(new LegalIdAndPartyId("1234", "5678")));
 
-		invoiceProcessor.fetchInvoiceRecipientPartyIds(item, MUNICIPALITY_ID);
+		invoiceProcessor.fetchInvoiceRecipientPartyId(item, MUNICIPALITY_ID);
 
 		assertThat(item.getRecipientLegalId()).isEqualTo("1234");
 		assertThat(item.getRecipientPartyId()).isEqualTo("5678");
@@ -234,11 +237,11 @@ class InvoiceProcessorTests {
 	 * Test scenario where recipient party id is not found.
 	 */
 	@Test
-	void fetchInvoiceRecipientPartyIds_2() {
+	void fetchInvoiceRecipientPartyId_2() {
 		var item = createItemEntity(itemBeingModified -> itemBeingModified.setRecipientLegalId("202104142399"));
 		when(partyIntegrationMock.getPartyId(item.getRecipientLegalId(), MUNICIPALITY_ID)).thenReturn(Optional.empty());
 
-		invoiceProcessor.fetchInvoiceRecipientPartyIds(item, MUNICIPALITY_ID);
+		invoiceProcessor.fetchInvoiceRecipientPartyId(item, MUNICIPALITY_ID);
 
 		assertThat(item.getStatus()).isEqualTo(RECIPIENT_PARTY_ID_NOT_FOUND);
 	}
@@ -247,7 +250,7 @@ class InvoiceProcessorTests {
 	 * Test scenario where invoice is sent.
 	 */
 	@Test
-	void sendDigitalInvoices_1() {
+	void sendDigitalInvoice_1() {
 		var item = createItemEntity(itemBeingModified -> itemBeingModified.setRecipientPartyId("1234"));
 
 		when(messagingIntegrationMock.sendInvoice(MUNICIPALITY_ID, item)).thenReturn(SENT);
@@ -261,7 +264,7 @@ class InvoiceProcessorTests {
 	 * Test scenario where invoice is not sent.
 	 */
 	@Test
-	void sendDigitalInvoices_2() {
+	void sendDigitalInvoice_2() {
 		var item = createItemEntity(itemBeingModified -> itemBeingModified.setRecipientPartyId("1234"));
 
 		when(messagingIntegrationMock.sendInvoice(MUNICIPALITY_ID, item)).thenReturn(NOT_SENT);
@@ -314,21 +317,22 @@ class InvoiceProcessorTests {
 	 */
 	@Test
 	void run_1() throws IOException {
-		var item = createItemEntity();
+		var archiveIndexItem = createItemEntity(itemBeingModified -> itemBeingModified.withId(1).withFilename(ARCHIVE_INDEX_XML));
+		var item = createItemEntity(itemBeingModified -> itemBeingModified.withId(2));
 		var invoiceProcessorSpy = spy(invoiceProcessor);
 
-		runMethodCommonStubs(item, invoiceProcessorSpy);
+		setupCommonStubs(invoiceProcessorSpy, archiveIndexItem, item);
 
-		doAnswer(updateItem(IGNORED)).when(invoiceProcessorSpy).markItems(item, MUNICIPALITY_ID);
+		doAnswer(updateItem(IGNORED)).when(invoiceProcessorSpy).markItem(item, MUNICIPALITY_ID);
 
 		invoiceProcessorSpy.run(LocalDate.now(), MUNICIPALITY_ID, "BatchName");
 
-		verify(invoiceProcessorSpy).markItems(item, MUNICIPALITY_ID);
+		verify(invoiceProcessorSpy).markItem(item, MUNICIPALITY_ID);
 		verify(invoiceProcessorSpy, never()).extractItemMetadata(any(), any());
 		verify(invoiceProcessorSpy, never()).extractInvoiceRecipientLegalId(any());
 		verify(invoiceProcessorSpy, never()).validateLegalId(any());
-		verify(invoiceProcessorSpy, never()).markProtectedIdentityItems(any(), eq(MUNICIPALITY_ID));
-		verify(invoiceProcessorSpy, never()).fetchInvoiceRecipientPartyIds(any(), any());
+		verify(invoiceProcessorSpy, never()).markProtectedIdentityItem(any(), eq(MUNICIPALITY_ID));
+		verify(invoiceProcessorSpy, never()).fetchInvoiceRecipientPartyId(any(), any());
 		verify(invoiceProcessorSpy, never()).sendDigitalInvoice(any(), any());
 		verify(dbIntegrationMock).persistItem(item);
 	}
@@ -338,22 +342,24 @@ class InvoiceProcessorTests {
 	 */
 	@Test
 	void run_2() throws IOException {
-		var item = createItemEntity(itemBeingModified -> itemBeingModified.setFilename("Faktura_00000001_to_9001011234.pdf"));
-		var invoiceProessorSpy = spy(invoiceProcessor);
-		runMethodCommonStubs(item, invoiceProessorSpy);
+		var archiveIndexItem = createItemEntity(itemBeingModified -> itemBeingModified.withId(1).withFilename(ARCHIVE_INDEX_XML));
+		var item = createItemEntity(itemBeingModified -> itemBeingModified.withId(2).withFilename("Faktura_00000001_to_9001011234.pdf"));
 
-		doAnswer(updateItem(INVOICE, IN_PROGRESS)).when(invoiceProessorSpy).markItems(item, MUNICIPALITY_ID);
-		doAnswer(updateItem(METADATA_INCOMPLETE)).when(invoiceProessorSpy).extractItemMetadata(item, "mocked-string");
+		var invoiceProcessorSpy = spy(invoiceProcessor);
+		setupCommonStubs(invoiceProcessorSpy, archiveIndexItem, item);
 
-		invoiceProessorSpy.run(LocalDate.now(), MUNICIPALITY_ID, "BatchName");
+		doAnswer(updateItem(INVOICE, IN_PROGRESS)).when(invoiceProcessorSpy).markItem(item, MUNICIPALITY_ID);
+		doAnswer(updateItem(METADATA_INCOMPLETE)).when(invoiceProcessorSpy).extractItemMetadata(item, "someData");
 
-		verify(invoiceProessorSpy).markItems(item, MUNICIPALITY_ID);
-		verify(invoiceProessorSpy).extractItemMetadata(item, "mocked-string");
-		verify(invoiceProessorSpy, never()).extractInvoiceRecipientLegalId(any());
-		verify(invoiceProessorSpy, never()).validateLegalId(any());
-		verify(invoiceProessorSpy, never()).markProtectedIdentityItems(any(), eq(MUNICIPALITY_ID));
-		verify(invoiceProessorSpy, never()).fetchInvoiceRecipientPartyIds(any(), any());
-		verify(invoiceProessorSpy, never()).sendDigitalInvoice(any(), any());
+		invoiceProcessorSpy.run(LocalDate.now(), MUNICIPALITY_ID, "BatchName");
+
+		verify(invoiceProcessorSpy).markItem(item, MUNICIPALITY_ID);
+		verify(invoiceProcessorSpy).extractItemMetadata(item, "someData");
+		verify(invoiceProcessorSpy, never()).extractInvoiceRecipientLegalId(any());
+		verify(invoiceProcessorSpy, never()).validateLegalId(any());
+		verify(invoiceProcessorSpy, never()).markProtectedIdentityItem(any(), eq(MUNICIPALITY_ID));
+		verify(invoiceProcessorSpy, never()).fetchInvoiceRecipientPartyId(any(), any());
+		verify(invoiceProcessorSpy, never()).sendDigitalInvoice(any(), any());
 		verify(dbIntegrationMock).persistItem(item);
 	}
 
@@ -362,23 +368,24 @@ class InvoiceProcessorTests {
 	 */
 	@Test
 	void run_3() throws IOException {
-		var item = createItemEntity(itemBeingModified -> itemBeingModified.setFilename("Faktura_00000001_to_9001011234.pdf"));
+		var archiveIndexItem = createItemEntity(itemBeingModified -> itemBeingModified.withId(1).withFilename(ARCHIVE_INDEX_XML));
+		var item = createItemEntity(itemBeingModified -> itemBeingModified.withId(2).withFilename("Faktura_00000001_to_9001011234.pdf"));
 		var invoiceProcessorSpy = spy(invoiceProcessor);
 
-		runMethodCommonStubs(item, invoiceProcessorSpy);
+		setupCommonStubs(invoiceProcessorSpy, archiveIndexItem, item);
 
-		doAnswer(updateItem(INVOICE, IN_PROGRESS)).when(invoiceProcessorSpy).markItems(item, MUNICIPALITY_ID);
-		doAnswer(doNotUpdate()).when(invoiceProcessorSpy).extractItemMetadata(item, "mocked-string");
+		doAnswer(updateItem(INVOICE, IN_PROGRESS)).when(invoiceProcessorSpy).markItem(item, MUNICIPALITY_ID);
+		doAnswer(doNotUpdate()).when(invoiceProcessorSpy).extractItemMetadata(item, "someData");
 		doAnswer(updateItem(RECIPIENT_LEGAL_ID_NOT_FOUND_OR_INVALID)).when(invoiceProcessorSpy).extractInvoiceRecipientLegalId(item);
 
 		invoiceProcessorSpy.run(LocalDate.now(), MUNICIPALITY_ID, "BatchName");
 
-		verify(invoiceProcessorSpy).markItems(item, MUNICIPALITY_ID);
-		verify(invoiceProcessorSpy).extractItemMetadata(item, "mocked-string");
+		verify(invoiceProcessorSpy).markItem(item, MUNICIPALITY_ID);
+		verify(invoiceProcessorSpy).extractItemMetadata(item, "someData");
 		verify(invoiceProcessorSpy).extractInvoiceRecipientLegalId(item);
 		verify(invoiceProcessorSpy, never()).validateLegalId(any());
-		verify(invoiceProcessorSpy, never()).markProtectedIdentityItems(any(), eq(MUNICIPALITY_ID));
-		verify(invoiceProcessorSpy, never()).fetchInvoiceRecipientPartyIds(any(), any());
+		verify(invoiceProcessorSpy, never()).markProtectedIdentityItem(any(), eq(MUNICIPALITY_ID));
+		verify(invoiceProcessorSpy, never()).fetchInvoiceRecipientPartyId(any(), any());
 		verify(invoiceProcessorSpy, never()).sendDigitalInvoice(any(), any());
 		verify(dbIntegrationMock).persistItem(item);
 	}
@@ -388,24 +395,25 @@ class InvoiceProcessorTests {
 	 */
 	@Test
 	void run_4() throws IOException {
-		var item = createItemEntity(itemBeingModified -> itemBeingModified.setFilename("Faktura_00000001_to_9001011234.pdf"));
+		var archiveIndexItem = createItemEntity(itemBeingModified -> itemBeingModified.withId(1).withFilename(ARCHIVE_INDEX_XML));
+		var item = createItemEntity(itemBeingModified -> itemBeingModified.withId(2).withFilename("Faktura_00000001_to_9001011234.pdf"));
 		var invoiceProcessorSpy = spy(invoiceProcessor);
 
-		runMethodCommonStubs(item, invoiceProcessorSpy);
+		setupCommonStubs(invoiceProcessorSpy, archiveIndexItem, item);
 
-		doAnswer(updateItem(INVOICE, IN_PROGRESS)).when(invoiceProcessorSpy).markItems(item, MUNICIPALITY_ID);
-		doAnswer(doNotUpdate()).when(invoiceProcessorSpy).extractItemMetadata(item, "mocked-string");
+		doAnswer(updateItem(INVOICE, IN_PROGRESS)).when(invoiceProcessorSpy).markItem(item, MUNICIPALITY_ID);
+		doAnswer(doNotUpdate()).when(invoiceProcessorSpy).extractItemMetadata(item, "someData");
 		doAnswer(updateItem(RECIPIENT_LEGAL_ID_FOUND)).when(invoiceProcessorSpy).extractInvoiceRecipientLegalId(item);
 		doAnswer(updateItem(RECIPIENT_LEGAL_ID_NOT_FOUND_OR_INVALID)).when(invoiceProcessorSpy).validateLegalId(item);
 
 		invoiceProcessorSpy.run(LocalDate.now(), MUNICIPALITY_ID, "BatchName");
 
-		verify(invoiceProcessorSpy).markItems(item, MUNICIPALITY_ID);
-		verify(invoiceProcessorSpy).extractItemMetadata(item, "mocked-string");
+		verify(invoiceProcessorSpy).markItem(item, MUNICIPALITY_ID);
+		verify(invoiceProcessorSpy).extractItemMetadata(item, "someData");
 		verify(invoiceProcessorSpy).extractInvoiceRecipientLegalId(item);
 		verify(invoiceProcessorSpy).validateLegalId(item);
-		verify(invoiceProcessorSpy, never()).markProtectedIdentityItems(any(), eq(MUNICIPALITY_ID));
-		verify(invoiceProcessorSpy, never()).fetchInvoiceRecipientPartyIds(any(), any());
+		verify(invoiceProcessorSpy, never()).markProtectedIdentityItem(any(), eq(MUNICIPALITY_ID));
+		verify(invoiceProcessorSpy, never()).fetchInvoiceRecipientPartyId(any(), any());
 		verify(invoiceProcessorSpy, never()).sendDigitalInvoice(any(), any());
 		verify(dbIntegrationMock).persistItem(item);
 	}
@@ -415,26 +423,27 @@ class InvoiceProcessorTests {
 	 */
 	@Test
 	void run_5() throws IOException {
-
-		var item = createItemEntity(itemBeingModified -> itemBeingModified.setFilename("Faktura_00000001_to_9001011234.pdf"));
+		var archiveIndexItem = createItemEntity(itemBeingModified -> itemBeingModified.withId(1).withFilename(ARCHIVE_INDEX_XML));
+		var item = createItemEntity(itemBeingModified -> itemBeingModified.withId(2).withFilename("Faktura_00000001_to_9001011234.pdf"));
 		var invoiceProcessorSpy = spy(invoiceProcessor);
-		runMethodCommonStubs(item, invoiceProcessorSpy);
 
-		doAnswer(updateItem(INVOICE, IN_PROGRESS)).when(invoiceProcessorSpy).markItems(item, MUNICIPALITY_ID);
-		doAnswer(doNotUpdate()).when(invoiceProcessorSpy).extractItemMetadata(item, "mocked-string");
+		setupCommonStubs(invoiceProcessorSpy, archiveIndexItem, item);
+
+		doAnswer(updateItem(INVOICE, IN_PROGRESS)).when(invoiceProcessorSpy).markItem(item, MUNICIPALITY_ID);
+		doAnswer(doNotUpdate()).when(invoiceProcessorSpy).extractItemMetadata(item, "someData");
 		doAnswer(updateItem(RECIPIENT_LEGAL_ID_FOUND)).when(invoiceProcessorSpy).extractInvoiceRecipientLegalId(item);
 		doAnswer(doNotUpdate()).when(invoiceProcessorSpy).validateLegalId(item);
-		doAnswer(updateItem(RECIPIENT_PARTY_ID_FOUND)).when(invoiceProcessorSpy).fetchInvoiceRecipientPartyIds(item, MUNICIPALITY_ID);
-		doAnswer(updateItem(RECIPIENT_LEGAL_ID_NOT_FOUND_OR_INVALID)).when(invoiceProcessorSpy).markProtectedIdentityItems(item, MUNICIPALITY_ID);
+		doAnswer(updateItem(RECIPIENT_PARTY_ID_FOUND)).when(invoiceProcessorSpy).fetchInvoiceRecipientPartyId(item, MUNICIPALITY_ID);
+		doAnswer(updateItem(RECIPIENT_LEGAL_ID_NOT_FOUND_OR_INVALID)).when(invoiceProcessorSpy).markProtectedIdentityItem(item, MUNICIPALITY_ID);
 
 		invoiceProcessorSpy.run(LocalDate.now(), MUNICIPALITY_ID, "BatchName");
 
-		verify(invoiceProcessorSpy).markItems(item, MUNICIPALITY_ID);
-		verify(invoiceProcessorSpy).extractItemMetadata(item, "mocked-string");
+		verify(invoiceProcessorSpy).markItem(item, MUNICIPALITY_ID);
+		verify(invoiceProcessorSpy).extractItemMetadata(item, "someData");
 		verify(invoiceProcessorSpy).extractInvoiceRecipientLegalId(item);
 		verify(invoiceProcessorSpy).validateLegalId(item);
-		verify(invoiceProcessorSpy).fetchInvoiceRecipientPartyIds(any(), any());
-		verify(invoiceProcessorSpy).markProtectedIdentityItems(item, MUNICIPALITY_ID);
+		verify(invoiceProcessorSpy).fetchInvoiceRecipientPartyId(any(), any());
+		verify(invoiceProcessorSpy).markProtectedIdentityItem(item, MUNICIPALITY_ID);
 		verify(invoiceProcessorSpy, never()).sendDigitalInvoice(any(), any());
 		verify(dbIntegrationMock).persistItem(item);
 	}
@@ -444,24 +453,26 @@ class InvoiceProcessorTests {
 	 */
 	@Test
 	void run_6() throws IOException {
-		var item = createItemEntity(itemBeingModified -> itemBeingModified.setFilename("Faktura_00000001_to_9001011234.pdf"));
+		var archiveIndexItem = createItemEntity(itemBeingModified -> itemBeingModified.withId(1).withFilename(ARCHIVE_INDEX_XML));
+		var item = createItemEntity(itemBeingModified -> itemBeingModified.withId(2).withFilename("Faktura_00000001_to_9001011234.pdf"));
 		var invoiceProcessorSpy = spy(invoiceProcessor);
-		runMethodCommonStubs(item, invoiceProcessorSpy);
 
-		doAnswer(updateItem(INVOICE, IN_PROGRESS)).when(invoiceProcessorSpy).markItems(item, MUNICIPALITY_ID);
-		doAnswer(doNotUpdate()).when(invoiceProcessorSpy).extractItemMetadata(item, "mocked-string");
+		setupCommonStubs(invoiceProcessorSpy, archiveIndexItem, item);
+
+		doAnswer(updateItem(INVOICE, IN_PROGRESS)).when(invoiceProcessorSpy).markItem(item, MUNICIPALITY_ID);
+		doAnswer(doNotUpdate()).when(invoiceProcessorSpy).extractItemMetadata(item, "someData");
 		doAnswer(updateItem(RECIPIENT_LEGAL_ID_FOUND)).when(invoiceProcessorSpy).extractInvoiceRecipientLegalId(item);
 		doAnswer(doNotUpdate()).when(invoiceProcessorSpy).validateLegalId(item);
-		doAnswer(updateItem(RECIPIENT_PARTY_ID_NOT_FOUND)).when(invoiceProcessorSpy).fetchInvoiceRecipientPartyIds(item, MUNICIPALITY_ID);
+		doAnswer(updateItem(RECIPIENT_PARTY_ID_NOT_FOUND)).when(invoiceProcessorSpy).fetchInvoiceRecipientPartyId(item, MUNICIPALITY_ID);
 
 		invoiceProcessorSpy.run(LocalDate.now(), MUNICIPALITY_ID, "BatchName");
 
-		verify(invoiceProcessorSpy).markItems(item, MUNICIPALITY_ID);
-		verify(invoiceProcessorSpy).extractItemMetadata(item, "mocked-string");
+		verify(invoiceProcessorSpy).markItem(item, MUNICIPALITY_ID);
+		verify(invoiceProcessorSpy).extractItemMetadata(item, "someData");
 		verify(invoiceProcessorSpy).extractInvoiceRecipientLegalId(item);
 		verify(invoiceProcessorSpy).validateLegalId(item);
-		verify(invoiceProcessorSpy).fetchInvoiceRecipientPartyIds(item, MUNICIPALITY_ID);
-		verify(invoiceProcessorSpy, never()).markProtectedIdentityItems(item, MUNICIPALITY_ID);
+		verify(invoiceProcessorSpy).fetchInvoiceRecipientPartyId(item, MUNICIPALITY_ID);
+		verify(invoiceProcessorSpy, never()).markProtectedIdentityItem(item, MUNICIPALITY_ID);
 		verify(invoiceProcessorSpy, never()).sendDigitalInvoice(any(), any());
 		verify(dbIntegrationMock).persistItem(item);
 	}
@@ -471,26 +482,28 @@ class InvoiceProcessorTests {
 	 */
 	@Test
 	void run_7() throws IOException {
-		var item = createItemEntity(itemBeingModified -> itemBeingModified.setFilename("Faktura_00000001_to_9001011234.pdf"));
+		var archiveIndexItem = createItemEntity(itemBeingModified -> itemBeingModified.withId(1).withFilename(ARCHIVE_INDEX_XML));
+		var item = createItemEntity(itemBeingModified -> itemBeingModified.withId(2).withFilename("Faktura_00000001_to_9001011234.pdf"));
 		var invoiceProcessorSpy = spy(invoiceProcessor);
-		runMethodCommonStubs(item, invoiceProcessorSpy);
 
-		doAnswer(updateItem(INVOICE, IN_PROGRESS)).when(invoiceProcessorSpy).markItems(item, MUNICIPALITY_ID);
-		doAnswer(doNotUpdate()).when(invoiceProcessorSpy).extractItemMetadata(item, "mocked-string");
+		setupCommonStubs(invoiceProcessorSpy, archiveIndexItem, item);
+
+		doAnswer(updateItem(INVOICE, IN_PROGRESS)).when(invoiceProcessorSpy).markItem(item, MUNICIPALITY_ID);
+		doAnswer(doNotUpdate()).when(invoiceProcessorSpy).extractItemMetadata(item, "someData");
 		doAnswer(updateItem(RECIPIENT_LEGAL_ID_FOUND)).when(invoiceProcessorSpy).extractInvoiceRecipientLegalId(item);
 		doAnswer(doNotUpdate()).when(invoiceProcessorSpy).validateLegalId(item);
-		doAnswer(doNotUpdate()).when(invoiceProcessorSpy).markProtectedIdentityItems(item, MUNICIPALITY_ID);
-		doAnswer(updateItem(RECIPIENT_PARTY_ID_FOUND)).when(invoiceProcessorSpy).fetchInvoiceRecipientPartyIds(item, MUNICIPALITY_ID);
+		doAnswer(doNotUpdate()).when(invoiceProcessorSpy).markProtectedIdentityItem(item, MUNICIPALITY_ID);
+		doAnswer(updateItem(RECIPIENT_PARTY_ID_FOUND)).when(invoiceProcessorSpy).fetchInvoiceRecipientPartyId(item, MUNICIPALITY_ID);
 		doAnswer(updateItem(NOT_SENT)).when(invoiceProcessorSpy).sendDigitalInvoice(MUNICIPALITY_ID, item);
 
 		invoiceProcessorSpy.run(LocalDate.now(), MUNICIPALITY_ID, "BatchName");
 
-		verify(invoiceProcessorSpy).markItems(item, MUNICIPALITY_ID);
-		verify(invoiceProcessorSpy).extractItemMetadata(item, "mocked-string");
+		verify(invoiceProcessorSpy).markItem(item, MUNICIPALITY_ID);
+		verify(invoiceProcessorSpy).extractItemMetadata(item, "someData");
 		verify(invoiceProcessorSpy).extractInvoiceRecipientLegalId(item);
 		verify(invoiceProcessorSpy).validateLegalId(item);
-		verify(invoiceProcessorSpy).markProtectedIdentityItems(item, MUNICIPALITY_ID);
-		verify(invoiceProcessorSpy).fetchInvoiceRecipientPartyIds(item, MUNICIPALITY_ID);
+		verify(invoiceProcessorSpy).markProtectedIdentityItem(item, MUNICIPALITY_ID);
+		verify(invoiceProcessorSpy).fetchInvoiceRecipientPartyId(item, MUNICIPALITY_ID);
 		verify(invoiceProcessorSpy).sendDigitalInvoice(MUNICIPALITY_ID, item);
 		verify(dbIntegrationMock).persistItem(item);
 	}
@@ -500,9 +513,10 @@ class InvoiceProcessorTests {
 	 */
 	private Answer<ItemEntity> updateItem(final ItemType type, final ItemStatus status) {
 		return invocation -> {
-			var invocationArgument = (ItemEntity) invocation.getArgument(0);
-			ofNullable(type).ifPresent(invocationArgument::setType);
-			ofNullable(status).ifPresent(invocationArgument::setStatus);
+			if (invocation.getArgument(0) instanceof ItemEntity itemEntity) {
+				ofNullable(type).ifPresent(itemEntity::setType);
+				ofNullable(status).ifPresent(itemEntity::setStatus);
+			}
 			return null;
 		};
 	}
@@ -524,9 +538,9 @@ class InvoiceProcessorTests {
 	/**
 	 * Common stubs for the run(LocalDate, String, String) method tests
 	 */
-	private void runMethodCommonStubs(final ItemEntity item, final InvoiceProcessor invoiceProcessor) throws IOException {
+	private void setupCommonStubs(final InvoiceProcessor invoiceProcessor, final ItemEntity... items) throws IOException {
 		var date = LocalDate.now();
-		var batch = createBatchEntity(batchBeingModified -> batchBeingModified.withItems(List.of(item)));
+		var batch = createBatchEntity(batchBeingModified -> batchBeingModified.withItems(Arrays.asList(items)));
 		var batches = List.of(batch);
 
 		var raindanceIntegration = mock(RaindanceIntegration.class);
@@ -538,7 +552,7 @@ class InvoiceProcessorTests {
 		doNothing().when(raindanceIntegration).writeBatch(batch);
 		doNothing().when(raindanceIntegration).archiveOriginalBatch(batch);
 		doNothing().when(invoiceProcessor).updateAndPersistBatch(batch);
-		lenient().doReturn("mocked-string").when(invoiceProcessor).removeItemFromArchiveIndex(item, "mocked-string");
+		lenient().doReturn("mocked-string").when(invoiceProcessor).removeItemFromArchiveIndex(any(ItemEntity.class), anyString());
 		doNothing().when(messagingIntegrationMock).sendStatusReport(batches, date, MUNICIPALITY_ID);
 	}
 }
